// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterButton Component renders correctly 1`] = `
<div>
  <div
    class="filterButton"
  >
    <div
      class="MuiButtonBase-root MuiChip-root Chip-root-1 Chip-default-2 MuiChip-clickable"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label"
      >
        Filter Button
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`FilterButton Component show selected chip style if isActive props is true 1`] = `
<div>
  <div
    class="filterButton"
  >
    <div
      class="MuiButtonBase-root MuiChip-root Chip-root-7 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label"
      >
        Filter Button
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;
